# TechNova-Partners

./: .gitignore  01_exploration_donnees.ipynb  README.md  generate_reports.py  main.py  pyproject.toml  technova_partners.ipynb
