[project]
name = "technova-attrition-analysis"
version = "0.1.0"
description = "Analyse des causes d'attrition chez TechNova Partners - Projet HR Analytics"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Clément", email = "clement@example.com" }
]
keywords = ["hr-analytics", "attrition", "machine-learning", "data-science"]

dependencies = [
    # Data manipulation & analysis
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "imbalanced-learn>=0.11.0",
    
    # Model interpretation
    "shap>=0.42.0",
    
    # Jupyter & notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "nbformat>=5.9.0",
    
    # Statistics
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    
    # Data quality & profiling
    "ydata-profiling>=4.5.0",
    
    # Utilities
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.4.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
